# rubiks-wrecker

./: Cube.ml  Cube.mli  README.md  bisect065822852.coverage  bisect130352110.coverage  bisect158094689.coverage  bisect194259751.coverage  bisect232750319.coverage  bisect383033565.coverage  bisect383681014.coverage  bisect461019193.coverage  bisect554994037.coverage  bisect598500381.coverage  bisect863329121.coverage  dune  dune-project  rubiks-wrecker.opam
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/cube_tests/: all-00000000000000000000000000000000  runtest-00000000000000000000000000000000
_build/.aliases/default/deploy/: all-00000000000000000000000000000000
_build/.aliases/default/server/: all-00000000000000000000000000000000
_build/.aliases/default/solver_tests/: all-00000000000000000000000000000000  runtest-00000000000000000000000000000000
_build/.aliases/default/src/: all-00000000000000000000000000000000
_build/.aliases/default/test/: all-00000000000000000000000000000000
_build/default/: Procfile  bisect145951099.coverage  bisect417437994.coverage  bisect897147842.coverage  dune-project  hello_world.install  hello_world.opam
_build/default/.dune/: configurator  configurator.v2
_build/default/.ppx/bcab0be011c28261c514e69f4fe141f8/: dune__exe___ppx.cmo
_build/default/.ppx/ecf090c8fb7f28d4b9cf50ba9610db04/: dune__exe___ppx.cmi  dune__exe___ppx.cmo  dune__exe___ppx.cmx
_build/default/.utop/: utop.ml-gen
_build/default/.utop/.utop.eobjs/byte/: dune__exe__Utop.cmo  dune__exe__Utop.cmt
_build/default/cube_tests/: bisect239873908.coverage  bisect265914961.coverage  bisect278051665.coverage  bisect459738026.coverage  bisect475447150.coverage  bisect487610380.coverage  bisect703239059.coverage  bisect759711845.coverage  bisect781949869.coverage  bisect935429734.coverage  cube_tests.pp.ml  dune  oUnit-All tests.cache
_build/default/cube_tests/.cube_tests.eobjs/byte/: dune__exe__Cube_tests.cmi  dune__exe__Cube_tests.cmo  dune__exe__Cube_tests.cmt
_build/default/cube_tests/.cube_tests.eobjs/native/: dune__exe__Cube_tests.cmx
_build/default/cube_tests/.merlin-conf/: exe-cube_tests
_build/default/deploy/: Procfile
_build/default/server/: server.ml  server.pp.ml  template.eml.html  template.ml  template.pp.ml
_build/default/server/.merlin-conf/: exe-server
_build/default/server/.server.eobjs/: dune__exe.ml-gen  dune__exe__Server.impl.all-deps  server.ml.d  server.pp.ml.d  template.ml.d  template.pp.ml.d
_build/default/server/.server.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Server.cmi  dune__exe__Server.cmo  dune__exe__Server.cmt  dune__exe__Template.cmi  dune__exe__Template.cmo  dune__exe__Template.cmt
_build/default/server/.server.eobjs/native/: dune__exe.cmx  dune__exe__Server.cmx  dune__exe__Template.cmx
_build/default/solver_tests/: bisect052122484.coverage  bisect110385461.coverage  bisect205860037.coverage  bisect233824719.coverage  bisect281490837.coverage  bisect491404241.coverage  bisect661781664.coverage  bisect734975875.coverage  bisect840818604.coverage  bisect973438618.coverage  dune  oUnit-All tests.cache  solver_tests.ml  solver_tests.pp.ml
_build/default/solver_tests/.merlin-conf/: exe-solver_tests
_build/default/solver_tests/.solver_tests.eobjs/byte/: dune__exe__Solver_tests.cmi  dune__exe__Solver_tests.cmo  dune__exe__Solver_tests.cmt
_build/default/solver_tests/.solver_tests.eobjs/native/: dune__exe__Solver_tests.cmx
_build/default/src/: color.cma  color.cmxa  color.cmxs  color.ml  color.pp.ml  consts.cma  consts.cmxa  consts.cmxs  consts.ml  consts.pp.ml  cube.cma  cube.cmxa  cube.cmxs  cube.ml  cube.mli  cube.pp.ml  cube.pp.mli  cubie.cma  cubie.cmxa  cubie.cmxs  cubie.pp.ml  dune  facelet.cma  facelet.cmxa  facelet.cmxs  facelet.ml  facelet.pp.ml  solver.cma  solver.cmxa  solver.cmxs  solver.ml  solver.pp.ml  turn.cma  turn.cmxa  turn.cmxs  turn.ml  turn.pp.ml  turn_stack.cma  turn_stack.cmxa  turn_stack.cmxs  (+2 more)
_build/default/src/.color.objs/byte/: color.cmi  color.cmo  color.cmt
_build/default/src/.color.objs/native/: color.cmx
_build/default/src/.consts.objs/byte/: consts.cmi  consts.cmo  consts.cmt
_build/default/src/.consts.objs/native/: consts.cmx
_build/default/src/.cube.objs/byte/: cube.cmi  cube.cmo  cube.cmt  cube.cmti
_build/default/src/.cube.objs/native/: cube.cmx
_build/default/src/.cubie.objs/byte/: cubie.cmi  cubie.cmo  cubie.cmt
_build/default/src/.cubie.objs/native/: cubie.cmx
_build/default/src/.facelet.objs/byte/: facelet.cmi  facelet.cmo  facelet.cmt
_build/default/src/.facelet.objs/native/: facelet.cmx
_build/default/src/.merlin-conf/: lib-color  lib-consts  lib-cube  lib-cubie  lib-facelet  lib-solver  lib-turn  lib-turn_stack
_build/default/src/.solver.objs/byte/: solver.cmi  solver.cmo  solver.cmt
_build/default/src/.solver.objs/native/: solver.cmx
_build/default/src/.turn.objs/byte/: turn.cmi  turn.cmo  turn.cmt
_build/default/src/.turn.objs/native/: turn.cmx
_build/default/src/.turn_stack.objs/byte/: turn_stack.cmi  turn_stack.cmo  turn_stack.cmt
_build/default/src/.turn_stack.objs/native/: turn_stack.cmx
_build/default/test/: cube_tests.pp.ml
_build/default/test/.cube_tests.eobjs/byte/: dune__exe__Cube_tests.cmi  dune__exe__Cube_tests.cmo  dune__exe__Cube_tests.cmt
_build/default/test/.merlin-conf/: exe-cube_tests
_coverage/: index.html
_coverage/cube_tests/: cube_tests.ml.html
_coverage/solver_tests/: solver_tests.ml.html
_coverage/src/: color.ml.html  consts.ml.html  cube.ml.html  facelet.ml.html  solver.ml.html  turn.ml.html  turn_stack.ml.html
cube_tests/: cube_tests.ml
server/: dune  server.ml  template.eml.html
solver_tests/: dune  solver_tests.ml
src/: color.ml  consts.ml  cube.ml  cube.mli  cubie.ml  dune  facelet.ml  solver.ml  solver.mli  turn.ml  turn_stack.ml
test/: cube_tests.ml
(+1 files in other folders)
