(library
  (name turn)
  (modules turn)
  (libraries 
    core
    base)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name facelet)
  (modules facelet)
  (libraries 
    core
    base)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name color)
  (modules color)
  (libraries 
    core
    base)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name turn_stack)
  (modules turn_stack)
  (libraries 
    core
    base
    turn)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name cube)
  (modules cube)
  (libraries 
    core
    base
    turn
    facelet
    color)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name solver)
  (modules solver)
  (libraries 
    core
    base
    turn
    facelet
    color
    cube
    turn_stack)
  (preprocess (pps ppx_jane bisect_ppx)))