(library
  (name turn)
  (modules turn)
  (libraries 
    core
    base)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name facelet)
  (modules facelet)
  (libraries 
    core
    base)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name color)
  (modules color)
  (libraries 
    core
    base)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name cubie)
  (modules cubie)
  (libraries 
    core
    base
    color)
  (preprocess (pps ppx_jane bisect_ppx)))

(library
  (name cube)
  (modules cube)
  (libraries 
    core
    base
    turn
    facelet
    color
    cubie)
  (preprocess (pps ppx_jane bisect_ppx)))